# arrow-bf-simd-bench

./: .gitignore  CMakeLists.txt
bench/: bf_bench.cpp  hash_bench.cpp  main.cpp
cmake/: External_arrow.cmake
hash/: hash.cpp  hash.hpp
result/: aws_m5.4xlarge
